2009-04-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* container.man: Fix version mismatch.
	* export_docidx.tcl: Fix version mismatch.
	* tests/container: Fix test names.

2009-04-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* include/export/plugin.inc: Made version info configurable
        * export_docidx.tcl: Version 0.1, unchanged
        * export_json.tcl: Version 0.1, unchanged

        * export_html.tcl: Bumped version to 0.2.
        * export_nroff.tcl: Ditto.
        * export_text.tcl: Ditto.
        * export_wiki.tcl: Ditto.

        * export_html.tcl: Fixed plugin API check.
        * export_nroff.tcl: Ditto.
        * export_text.tcl: Ditto.
        * export_wiki.tcl: Ditto, plus fix in file mapping.
	* pkgIndex.tcl: Bumped to version 0.2.

        * export.man: Typo fixed.
        * import.man: Ditto.
        * introduction.man: Ditto.
        * include/msgcat.inc: Ditto.
        * include/export/config/html.inc: Ditto.
        * include/import/plugin.inc: Ditto.
        * import_docidx.tcl: Ditto. 
        * import_json.tcl: Ditto.
        * tests/parse: Ditto.

2009-03-31  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Doctools version 2, index processing.