@@ -4,7 +4,7 @@
 # Copyright (c) 2009 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: container.test,v 1.1 2009/04/01 04:28:37 andreas_kupries Exp $
+# RCS: @(#) $Id: container.test,v 1.2 2009/04/29 02:10:34 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -26,7 +26,7 @@ support {
     use doctools2base/paths.tcl           doctools::paths
     useLocal export.tcl      doctools::idx::export
     useLocal import.tcl      doctools::idx::import
-    use doctools2base/nroff_manmacros.tcl doctools::nroff::man.macros
+    use doctools2base/nroff_manmacros.tcl doctools::nroff::man_macros
 
     source [tcllibPath doctools2base/tests/common]
 }
