@@ -4,7 +4,7 @@
 # Copyright (c) 2009 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: export_nroff.test,v 1.1 2009/04/01 04:28:37 andreas_kupries Exp $
+# RCS: @(#) $Id: export_nroff.test,v 1.2 2009/04/29 02:10:34 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -19,7 +19,7 @@ support {
     use      fileutil/fileutil.tcl  fileutil      ;# tests/common
     useLocal structure.tcl      doctools::idx::structure
     use doctools2base/text.tcl               doctools::text
-    use doctools2base/nroff_manmacros.tcl    doctools::nroff::man.macros
+    use doctools2base/nroff_manmacros.tcl    doctools::nroff::man_macros
 }
 testing {
     package provide doctools::idx::export::plugin 1
